service page url fixed

--- a/services.html
+++ b/services.html
@@ -356,7 +356,7 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <!-- <a class="default__button" href="request-quote">GET FREE QUATE</a> -->
                                     <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
@@ -379,11 +379,11 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/web.png" alt="">
+                                    <img src="assets/img/service/services_2/web.png" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="webdevelopment.html">Web Development</a></h5>
+                                        <h5><a href="web-development-services">Web Development</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On leads in web development, creating responsive, and
@@ -393,7 +393,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="web-development-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -413,11 +413,11 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/app.png" alt="">
+                                    <img src="assets/img/service/services_2/app.png" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="appdevelop.html">Mobile App Development</a></h5>
+                                        <h5><a href="mobile-app-development-services">Mobile App Development</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On excels in mobile app development services, delivering
@@ -428,7 +428,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="mobile-app-development-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -452,7 +452,7 @@
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="software.html">Software Development</a></h5>
+                                        <h5><a href="software-development-services">Software Development</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On specializes in software development, crafting innovative
@@ -462,7 +462,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn " href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn " href="software-development-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -481,11 +481,11 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/game.png" alt="">
+                                    <img src="assets/img/service/services_2/game.png" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="service-details.html">Game Development</a></h5>
+                                        <h5><a href="game-development-services">Game Development</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On excels in game development, creating immersive, engaging,
@@ -495,7 +495,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="game-development-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -519,7 +519,7 @@
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="wordpress.html">WordPress Sevelopment</a></h5>
+                                        <h5><a href="wordpress-development-services">WordPress Sevelopment</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On specializes in WordPress development, offering custom
@@ -529,7 +529,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="wordpress-development-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -553,7 +553,7 @@
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="itexpert.html">Network Solutions</a></h5>
+                                        <h5><a href="network-services">Network Solutions</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On provides comprehensive network solutions, expert computer
@@ -563,7 +563,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="network-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -587,7 +587,7 @@
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="uidesign.html">UI/UX Design</a></h5>
+                                        <h5><a href="ui-ux-design">UI/UX Design</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On offers expert UI/UX design services, creating intuitive,
@@ -597,7 +597,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="ui-ux-design"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -616,11 +616,11 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/seo.png" alt="">
+                                    <img src="assets/img/service/services_2/seo.png" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="seo.html">Search Engine Optimization</a></h5>
+                                        <h5><a href="seo-services">Search Engine Optimization</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On provides expert SEO services, optimizing websites to enhance
@@ -630,7 +630,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="seo-services"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -653,7 +653,7 @@
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
-                                        <h5><a href="Content_Creater.html">Content creator</a></h5>
+                                        <h5><a href="content-creater">Content creator</a></h5>
                                     </div>
                                     <div class="service__text">
                                         <p>Digital Minds On empowers brands with professional content creation,
@@ -663,7 +663,7 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
+                                    <a class="direction__btn" href="content-creater"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -722,7 +722,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -750,7 +750,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Kristin Gilbert</a></h6>
+                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -777,7 +777,7 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Arlene Miles</a></h6>
+                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -804,7 +804,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -832,7 +832,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
