url remove in request

--- a/content-creater.html
+++ b/content-creater.html
@@ -334,8 +334,8 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">Contact Us</a>
+                                    <!-- <a class="default__button" href="request-quote">GET FREE QUATE</a> -->
+                                    <a class="default__button" href="contact">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
@@ -380,60 +380,63 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
+
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">WordPress Development
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">UI/UX Design
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">SEO Specialist
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Content creator
+                                            <a class="sidebar__common__input" href="content-creater">Content creator
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">IT Specialists
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
+
                                     </ul>
                                 </div>
 
@@ -447,13 +450,15 @@
                                 </div>
                                 <div class="sidebar__button">
                                     <a class="default__button sidebar__button__1" target="_blank"
-                                        href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
+                                        href="javascript:void(0)">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="assets/img/download.docx">Download DOC<i
-                                            class="icofont-file-document"></i></a>
+                                        href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
+
+
+
                         </div>
                         <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
@@ -759,7 +764,7 @@
                         </div>
 
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="#">GET A FREE QUOTE</a>
+                            <a class="default__button" href="contact">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
