--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -338,7 +338,7 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <!-- <a class="default__button" href="request-quote">GET FREE QUATE</a> -->
                                     <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
@@ -452,9 +452,9 @@
                                 </div>
                                 <div class="sidebar__button">
                                     <a class="default__button sidebar__button__1" target="_blank"
-                                        href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
+                                        href="javascript:void(0)">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="assets/img/download.docx">Download DOC<i
+                                        href="javascript:void(0)">Download DOC<i
                                             class="icofont-file-document"></i></a>
                                 </div>
 
@@ -757,7 +757,7 @@
                         </div>
 
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="request-quote">GET A FREE QUOTE</a>
+                            <a class="default__button" href="contact">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
