--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -333,16 +333,11 @@
                                 <h2 class="heading">Mobile App Development Services</h2>
                             </div>
                             <div class="herobanner__text">
-                                <p style="max-width: 100%;"> Digital Minds On provides
-                                    comprehensive mobile development services, from initial ideation and app design to
-                                    project launch and ongoing support. Our team is dedicated to helping businesses
-                                    harness the power of mobile technologies to enhance operational efficiency, elevate
-                                    customer experiences, and deliver top-tier service quality. With a focus on
-                                    innovation and user-centric design, Digital Minds On ensures your mobile solutions
-                                    align perfectly with your business goals. Whether you’re launching a new app or
-                                    optimizing an existing one, our expertise guarantees a seamless journey from concept
-                                    to success. Partner with Digital Minds On to transform your vision into impactful
-                                    mobile solutions. </p>
+                                <p style="max-width: 100%;"> Digital Minds On offers full-service mobile development,
+                                    from ideation and design to launch and support. We help businesses leverage mobile
+                                    technology to improve efficiency, enhance customer experiences, and achieve top-tier
+                                    service quality. Trust our expertise for seamless, innovative, and user-focused
+                                    mobile solutions.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
@@ -463,8 +458,7 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="javascript:void(0)">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="javascript:void(0)">Download DOC<i
-                                            class="icofont-file-document"></i></a>
+                                        href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
