--- a/web-development-services.html
+++ b/web-development-services.html
@@ -328,16 +328,11 @@
                                     <h2 class="heading">Web Development Services</h2>
                                 </div>
                                 <div class="herobanner__text">
-                                    <p style="max-width: 100%;"> Partner with Digital Minds On, a
-                                        top-rated custom web development company, to build a high-performance website
-                                        that delivers exceptional results. From creating engaging corporate sites to
-                                        developing complex animations, we specialize in crafting digital experiences
-                                        that captivate users and drive success. Our services include custom UX & UI
-                                        design, tailored to enhance user satisfaction, as well as search and conversion
-                                        optimization to maximize your site's performance. With end-to-end development,
-                                        we ensure seamless integration and functionality across all platforms. Trust
-                                        Digital Minds On to bring your vision to life and create a website that stands
-                                        out in today's competitive digital landscape. </p>
+                                    <p style="max-width: 950px;"> Digital Minds On, a leading web development company, to
+                                        create high-performance websites. We specialize in custom UX/UI design, complex
+                                        animations, and optimization for enhanced user experience, search, and
+                                        conversions. Our end-to-end services ensure seamless integration and
+                                        functionality across all platforms, driving success. </p>
                                 </div>
                                 <div class="banner-button">
                                     <ul class="common-button">
@@ -390,19 +385,22 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="web-development-services">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software-development-services">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
@@ -416,7 +414,8 @@
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress
                                                 Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
@@ -428,7 +427,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="game-development-services">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -457,8 +457,7 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="javascript:void(0)">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="javascript:void(0)">Download DOC<i
-                                            class="icofont-file-document"></i></a>
+                                        href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
@@ -470,11 +469,12 @@
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
                             <div class="service__details__planning__heading">
                                 <h6>Let's discuss your project with us</h6>
-                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the first step toward creating your product.</p>
+                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the first
+                                    step toward creating your product.</p>
                                 <a class="default__button" href="contact">CONTACT US</a>
                             </div>
                         </div>
-                          <!-- contact form -->
+                        <!-- contact form -->
                         <div class="col-md-12 mt-4">
                             <div class="breadcrumbarea-video-small">
                                 <div class="breadcrumbarea__overlay-video">
