--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -329,15 +329,11 @@
                                 <h2 class="heading">UX/UI Design Principles in Modern Mobile Applications</h2>
                             </div>
                             <div class="herobanner__text">
-                                <p class="banner-width" style="max-width: 100%;">Transform your ideas into seamless
-                                    user experiences with Digital Minds On. Our expert team of 150+ design consultants,
-                                    UX/UI specialists, researchers, and design engineers bring over 20 years of industry
-                                    expertise to the table. At Digital Minds On, we blend innovation and precision to
-                                    craft intuitive designs that captivate users and drive success across various
-                                    industries. Whether you're looking to enhance functionality or create an engaging
-                                    interface, our seasoned professionals are here to deliver results. Partner with us
-                                    to turn your vision into a reality, and let our proven experience shape the future
-                                    of your digital projects.</p>
+                                <p class="banner-width" style="max-width: 950px;">Transform your ideas into exceptional
+                                    user experiences with Digital Minds On. Our team of 150+ experts, including
+                                    designers, UX/UI specialists, and engineers, brings 20+ years of experience to
+                                    create intuitive, innovative designs that drive success. Partner with us to bring
+                                    your vision to life.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
@@ -459,8 +455,7 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="javascript:void(0)">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="javascript:void(0)">Download DOC<i
-                                            class="icofont-file-document"></i></a>
+                                        href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
